Before Rita changes

--- a/LDA_paper/bib.bib
+++ b/LDA_paper/bib.bib
@@ -6,6 +6,14 @@
   publisher={Prentice Hall Englewood Cliffs}
 }
 
+@inproceedings{osadchy2015k,
+  title={K-hyperplane Hinge-Minimax Classifier},
+  author={Osadchy, Margarita and Hazan, Tamir and Keren, Daniel},
+  booktitle={Proceedings of the 32nd International Conference on Machine Learning (ICML-15)},
+  pages={1558--1566},
+  year={2015}
+}
+
 @article{fisher1936use,
   title={The use of multiple measurements in taxonomic problems},
   author={Fisher, Ronald A},
@@ -17,7 +25,33 @@
   publisher={Wiley Online Library}
 },
 
+@article{turk1991eigenfaces,
+  title={Eigenfaces for recognition},
+  author={Turk, Matthew and Pentland, Alex},
+  journal={Journal of cognitive neuroscience},
+  volume={3},
+  number={1},
+  pages={71--86},
+  year={1991},
+  publisher={MIT Press}
+}
 
+@book{duda2012pattern,
+  title={Pattern classification},
+  author={Duda, Richard O and Hart, Peter E and Stork, David G},
+  year={2012},
+  publisher={John Wiley \& Sons}
+}
+
+@article{tahmasebi2010application,
+  title={Application of discriminant analysis for alteration separation; sungun copper deposit, East Azerbaijan, Iran},
+  author={Tahmasebi, Pejman and Hezarkhani, Ardeshir and Mortazavi, Mojtaba},
+  journal={Australian Journal of Basic and Applied Sciences},
+  volume={6},
+  number={4},
+  pages={564--576},
+  year={2010}
+}
 
 @inproceedings{gabel2015monitoring,
   title={Monitoring Least Squares Models of Distributed Streams},
